# drGAT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Model Training.ipynb  README.md  Tuning.ipynb  Tutorial.ipynb  create_dateset.ipynb  drGAT.py  environment.yml  equal check.ipynb  get_params.py  metrics.py  model_training.ipynb  predict_with_pretrained_model.ipynb  pyproject.toml  requirement.txt  results.ipynb  results_no_attn.ipynb  run_drGAT.py  run_drGT.py  test2.ipynb
CTRP_data/: drugAct.csv  idxs.npy  test.csv  test_labels.npy  train.csv  train_labels.npy  val.csv  val_labels.npy
Figs/: CTRP comparison.ipynb  Fig2.ipynb  Fig3.ipynb  Fig4.cys  Fig4.ipynb  Fig5.ipynb  Get pubmed.ipynb  acVSdeeppurpose.csv  comb_count.csv  drug2smiles.csv  dti_drugbank.csv  gea.csv  graph.csv  graph_norm.csv  gsea_results.csv  idxs.npy  moa_with_top5.csv  nci_gdsc.csv  nsc_cid_smiles_class_name.csv  nsc_dti.csv  nsc_name.csv  preprocess_fig2.ipynb  preprocess_fig4.ipynb  preprocess_for_fig2.ipynb  preprocess_gsea.ipynb  pubchem.csv  result.csv  result_all.csv  uni2seq.csv  utils.py
GDSC1_data/: drug_sim.csv  idxs.npy  test.csv  test_labels.npy  train.csv  train_labels.npy  val.csv  val_labels.npy
GDSC2_data/: drug_sim.csv  idxs.npy  test.csv  test_labels.npy  train.csv  train_labels.npy  val.csv  val_labels.npy
New_data/: New_Cell_NCI.ipynb  New_Drug_gdsc2.ipynb  new_cell_nci_gat.py  new_cell_nci_gcn.py  new_cell_nci_mpnn.py  new_cell_nci_t.py  new_cell_nci_v2.py  new_drug_gat.py  new_drug_gcn.py  new_drug_mpnn.py  new_drug_t.py  new_drug_v2.py  test_cell.ipynb  (+7 more)
(+923 files in other folders)
