[project]
name = "drgat"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # PyTorch >=2.2 includes RCE fix (https://github.com/pytorch/pytorch/security)
    "torch>=2.2.0,<2.6.0",
    "torch-geometric==2.3.1",
    "numpy==1.26.4",
    "matplotlib>=3.7.0",
    "pandas==2.2.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0"
]
